fixing issues with some special chars when executing the command.